# skellar-python-tutorial

./: .env.example  .gitignore  MISSIONS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: verify.yml
missions/m1_hello_world/: README.md  main.py  tests.py
missions/m2_variables_and_types/: README.md  main.py  tests.py
missions/m3_lists_and_loops/: README.md  main.py  tests.py
missions/m4_dictionaries/: main.py  tests.py
missions/m5_functions_and_modules/: README.md  main.py  tests.py
missions/m6_classes_and_objects/: README.md  main.py  tests.py
src/: app.py
src/1-hello-world/: __init__.py  main.py  mission.md  test_hello_world.py  tests.py
src/2-variables-and-types/: __init__.py  main.py  test_variables_and_types.py  tests.py
src/3-lists-and-loops/: __init__.py  main.py  mission.md  test_lists_and_loops.py  tests.py
src/4-dictionaries/: __init__.py  main.py  mission.md  test_dictionaries.py  tests.py
src/5-functions-and-modules/: __init__.py  main.py  mission.md  test_functions_and_modules.py
src/6-classes-and-objects/: __init__.py  main.py  mission.md  test_classes_and_objects.py
src/api/: mission_endpoints.py  validation_endpoints.py
src/missions/: __init__.py  mission_registry.py
src/missions/mission_01_hello_world/: instructions.md  tests.py
src/models/: mission.py
src/validators/: base_validator.py  python_runner.py
tests/: test_missions.py  test_validators.py
